# scout

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.forgejo/workflows/: publish.yml  test.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli.md  diff-ignore.md  index.md  quickstart.md  scenarios.md
scout/: __init__.py  cli.py  config.py  git.py  index.py  mock_vars.py  run_metadata.py
scout/collector/: control.py  db.py  proxy.py  subprocess.py
scout/matcher/: align.py  compare.py  diff_db.py  diff_report.py  diff_server.py  noise.py  normalize.py
scout/report/: html.py  junit.py  verify_html.py
scout/runner/: __init__.py  executor.py  locator.py  page.py  scenario.py
tests/: test_cli.py  test_cli_runs.py  test_config.py  test_git.py  test_index.py  test_run_metadata.py
tests/collector/: test_control.py  test_db.py
tests/matcher/: test_align.py  test_compare.py  test_diff_db.py  test_diff_report.py  test_noise.py  test_normalize.py
tests/report/: test_html.py  test_junit.py
tests/runner/: test_batch.py  test_executor.py  test_executor_hooks.py  test_locator.py  test_page.py  test_scenario.py
