[project]
name = "boxprobe-scout"
version = "0.1.4"
description = "Open-source tool for UI-driven API regression testing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Jason Merx", email = "jasonmerx@boxprobe.com"},
]
maintainers = [
    {name = "BoxProbe", email = "contact@boxprobe.com"},
]
keywords = [
    "testing",
    "regression-testing",
    "api-testing",
    "ui-testing",
    "playwright",
    "qa",
    "diff",
    "black-box",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "playwright",
    "httpx",
    "loguru",
    "pyrage",
    "ruamel.yaml",
    "mitmproxy>=10",
    "aiohttp",
]

[project.urls]
Homepage = "https://boxprobe.com"
Repository = "https://github.com/boxprobe/scout"
Documentation = "https://github.com/boxprobe/scout#readme"
Issues = "https://github.com/boxprobe/scout/issues"
Changelog = "https://github.com/boxprobe/scout/blob/main/CHANGELOG.md"

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "jinja2",
    "python-multipart",
    "fastapi-users[sqlalchemy]",
    "authlib",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-playwright",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "ruff",
    "pyright",
]

[project.scripts]
scout = "scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scout"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",             # pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "ASYNC",         # flake8-async
    "B",             # flake8-bugbear
    "A",             # flake8-builtins
    "S",             # flake8-bandit (security)
    "T20",           # flake8-print (catch stray prints)
    "RUF",           # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Test data (URLs, JSON literals, expected outputs) is often long by nature.
"tests/**" = ["S101", "E501"]
# Files with embedded HTML/JS/CSS/SQL template strings — line length is dominated
# by template content where breaking lines hurts readability.
"scout/matcher/diff_report.py" = ["E501"]
"scout/matcher/diff_db.py" = ["E501"]
"scout/report/verify_html.py" = ["E501"]
"scout/report/html.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end browser tests",
]
